--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 ---
 layout: home
-background: '/img/bg-index.jpg'
+background: 'https://raw.githubusercontent.com/clxkdk10/clxkdk10.github.io/master/img/bg-index.jpg'
 ---
